Bug 1258663 - Crash annotate system call failures in the IPC transport. r=gabor